# BindCraft_mess

./: .gitignore  README.md  pyproject.toml
bindcraft/: __init__.py  io.py  logger.py  run.py  runner.py
bindcraft/cmd/: root.py
bindcraft/functions/: __init__.py  biopython_utils.py  colabdesign_utils.py  generic_utils.py
functions/: __init__.py  colabdesign_utils.py  pyrosetta_utils.py
scripts/: bindcraft.py
settings_target/: EGFR.json
