[tool.poetry]
name = "bindcraft"
version = "0.1.0"
description = ""
authors = ["cbrown <cbrown@alpha29.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colabdesign = {git = "https://github.com/alpha29/ColabDesign.git"}
numpy = "^1.26.4"
scipy = "^1.14.1"
biopython = "^1.84"
matplotlib = "^3.9.2"
jax = {extras = ["cuda"], version = "^0.4.35"}
pyrosetta-installer = "^0.1.2"
loguru = "^0.7.2"
typer = "^0.12.5"
pdb-tools = "^2.5.0"
ffmpeg-python = "^0.2.0"
plotly = "^5.24.1"
kaleido = "0.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
ruff = "^0.7.2"

[tool.poetry.scripts]
bindcraft = "bindcraft.cmd.root:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
